Fix breadcrumb collection logo alignment in bootstrap forums skin

--- a/skins/bootstrap_forums_skin/style.less
+++ b/skins/bootstrap_forums_skin/style.less
@@ -47,6 +47,9 @@
 ol.breadcrumb {
 	margin-left: 0;
 	float: left;
+	img {
+		margin-top: -2px;
+	}
 }
 
 // Status icons
